# firmware

./: .gitignore  .travis.yml  README.md  platformio.ini
.github/workflows/: main.yml
docs/: README.md
docs/data/: index.json
firmware/: config.h  config_sample.h  core.h  define.h  features.h  loop.cpp  loop.h  loop.ino  mqtt_logic.ino  mqtt_robot.ino  mqtt_route.ino  mqtt_sensors.ino  neoPixel.ino  pattern.ino  setup.cpp  setup.ino  setup.ino.cpp  wifi.ino
firmware/algorithms/: algorithm_colorRipple.cpp  algorithm_discoverColor.cpp  algorithm_moveRobot.cpp  algorithm_template.cpp  algorithms.cpp  algorithms.h  algorithms_colorRipple.cpp
firmware/communication/: communication.h  wifi_module.cpp  wifi_module.h
firmware/config/: config_sample.h  definitions.h  global_variables.h  pins.h
firmware/modules/: neoPixel.cpp  neoPixel.h
firmware/mqtt/: def_mqtt.h  mqtt.cpp  mqtt.h  mqtt_color.cpp  mqtt_comm.cpp  mqtt_distance.cpp  mqtt_functions.cpp  mqtt_functions.h  mqtt_libs.h  mqtt_neopixel.cpp  mqtt_proximity.cpp  mqtt_robot.cpp  mqtt_router.cpp
firmware/src/: SW_Distance.cpp  SW_Distance.h  SW_GPIO.cpp  SW_GPIO.h  SW_Infared.cpp  SW_Infared.h  SW_LSM303.cpp  SW_Memory.cpp  SW_Memory.h  SW_Motors.h  (+5 more)
ros2-workspace/src/my_package/: CMakeLists.txt  package.xml
ros2-workspace/src/my_package/src/: my_node.cpp
src/: config_sample.h  define.h  espNow.ino  features.h  infared.ino  loop.cpp  loop.ino  mqtt.h  mqtt.ino  mqtt_logic.ino  mqtt_route.ino  navigation.ino  ota.ino  pixelLEDs.ino  program.ino  setup.cpp  setup.h  src.ino  wifiClient.ino  wifiMonitor.ino
(+158 files in other folders)
